# generated/api-swagger/swagger.json
@@ -5,48 +5,10 @@
     "version": "1.0"
   },
   "paths": {
-    "/{id}": {
-      "post": {
-        "tags": ["api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/AccountUpdateRequest"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/new": {
-      "post": {
-        "tags": ["api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/AccountCreateRequest"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
     "/": {
       "post": {
         "tags": ["api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"],
-        "operationId": "AccountUpsert",
+        "operationId": "identity.connect",
         "parameters": [
           {
             "name": "apiKey",
@@ -115,16 +77,6 @@
                 }
               }
             }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemHttpResult"
-                }
-              }
-            }
           }
         }
       }
@@ -132,22 +84,24 @@
   },
   "components": {
     "schemas": {
-      "AccountCreateRequest": {
-        "type": "object",
-        "additionalProperties": false
-      },
-      "AccountUpdateRequest": {
-        "type": "object",
-        "additionalProperties": false
-      },
       "AccountUpsertRequest": {
         "type": "object",
+        "properties": {
+          "connection": {
+            "type": "string",
+            "nullable": true
+          },
+          "authentication": {
+            "type": "string",
+            "nullable": true
+          }
+        },
         "additionalProperties": false
       },
       "AuthenticationChallengeState": {
         "type": "object",
         "properties": {
-          "connect_token": {
+          "connection": {
             "type": "string",
             "nullable": true
           },
@@ -167,7 +121,7 @@
       "AuthenticationConnectState": {
         "type": "object",
         "properties": {
-          "connect_token": {
+          "connection": {
             "type": "string",
             "nullable": true
           },
@@ -322,52 +276,6 @@
           }
         },
         "additionalProperties": {}
-      },
-      "ProblemDetails": {
-        "type": "object",
-        "properties": {
-          "type": {
-            "type": "string",
-            "nullable": true
-          },
-          "title": {
-            "type": "string",
-            "nullable": true
-          },
-          "status": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "detail": {
-            "type": "string",
-            "nullable": true
-          },
-          "instance": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": {}
-      },
-      "ProblemHttpResult": {
-        "type": "object",
-        "properties": {
-          "problemDetails": {
-            "$ref": "#/components/schemas/ProblemDetails"
-          },
-          "contentType": {
-            "type": "string",
-            "nullable": true,
-            "readOnly": true
-          },
-          "statusCode": {
-            "type": "integer",
-            "format": "int32",
-            "readOnly": true
-          }
-        },
-        "additionalProperties": false
       },
       "TenantDetails": {
         "type": "object",
